--- a/package.json
+++ b/package.json
@@ -5,19 +5,33 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "prestart": "webpack --mode=development",
+    "start": "node ./server/server.js"
   },
   "dependencies": {
+    "express": "^4.16.4",
+    "showdown": "^1.9.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^7.1.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "dotenv": "^6.0.0",
+    "dotenv-webpack": "^1.5.7",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
-    "vue-template-compiler": "^2.5.17"
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.21.0",
+    "vue-loader": "^15.2.4",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-livereload-plugin": "^2.1.1"
   },
   "eslintConfig": {
     "root": true,
